Adding new div to allow content to be responsive without breaking the flex of bootstrap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="bs/style.css">
     
     <title>Bienvenue sur Argonaut.fr</title>
 </head>
@@ -179,32 +180,38 @@
                 <h1 class="card-title font-weight-bold">Literie</h1>
               </div>
               <p class="card-text">Dans un lit, on s’y blottit, on s’y réchauffe et surtout, on y dort. L’indispensable pour des nuits paisibles ? Le matelas ! En 140x190cm ou en 160x200cm, seule la taille change, pas le confort !</p>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+              <a href="categorie.html" class="btn btn-primary">En savoir plus</a>
             </div>
           </div>
           <div class="row">
-            <div class="card col-md-4 d-flex flex-column align-items-center p-5" style="border: 1px solid grey">
-              <img class="card-img-top img-fluid" src="images/lit1.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">SOMDREAM Ensemble Matelas 140x190 cm + Sommier + Pieds - Mémoire de Forme</h5>
-                <h3 class="card-text font-weight-bold text-danger">319 euros !</h3>
-                <a href="#" class="btn btn-primary">En savoir plus</a>
+            <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+              <div class="p-2" style="border: 1px solid grey">
+                <img class="card-img-top img-fluid" src="images/lit1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">SOMDREAM Ensemble Matelas 140x190 cm + Sommier + Pieds - Mémoire de Forme</h5>
+                  <h3 class="card-text font-weight-bold text-danger">319 € !</h3>
+                  <a href="produit.html" class="btn btn-primary">En savoir plus</a>
+                </div>
               </div>
             </div>
-            <div class="card col-md-4 d-flex flex-column align-items-center p-5" style="border: 1px solid grey">
-              <img class="card-img-top img-fluid" src="images/lit2.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">BOBOCHIC Matelas COCOONING 160x200 cm - 26 cm - Mémoire de Forme - </h5>
-                <h3 class="card-text font-weight-bold text-danger">395 euros !</h3>
-                <a href="#" class="btn btn-primary">En savoir plus</a>
+            <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+              <div class="p-2" style="border: 1px solid grey">
+                <img class="card-img-top img-fluid" src="images/lit2.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">BOBOCHIC Matelas COCOONING 160x200 cm - 26 cm - Mémoire de Forme - </h5>
+                  <h3 class="card-text font-weight-bold text-danger">395 € !</h3>
+                  <a href="#" class="btn btn-primary">En savoir plus</a>
+                </div>
               </div>
             </div>
-            <div class="card col-md-4 d-flex flex-column align-items-center p-5" style="border: 1px solid grey">
-              <img class="card-img-top img-fluid" src="images/lit5.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">DEKO DREAM Ensemble SPRINGMAX Matelas + sommier 140x190 cm - </h5>
-                <h3 class="card-text font-weight-bold text-danger">289 euros !</h3>
-                <a href="#" class="btn btn-primary">En savoir plus</a>
+            <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+              <div class="p-2" style="border: 1px solid grey">
+                <img class="card-img-top img-fluid" src="images/lit5.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">DEKO DREAM Ensemble SPRINGMAX Matelas + sommier 140x190 cm - </h5>
+                  <h3 class="card-text font-weight-bold text-danger">289 € !</h3>
+                  <a href="#" class="btn btn-primary">En savoir plus</a>
+                </div>
               </div>
             </div>
           </div>  
@@ -223,29 +230,35 @@
             </div>
           </div>
 
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/congélateur.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">BOSCH GSN58VWEV - Congélateur armoire - 365L - Froid ventilé - L 70 x H 191 cm - Blanc</h5>
-              <h3 class="card-text font-weight-bold text-danger">689 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
-            </div>
-          </div>
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/friteuse.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">TEFAL FR511170 Filtra Pro Friteuse semi-professionnelle Inox&Design, 2400 W, 3 L</h5>
-              <h3 class="card-text font-weight-bold text-danger">79 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
-            </div>
-          </div>
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/lave-linge.jpg" alt="Card image cap">
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/congélateur.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Lave-linge hublot SAMSUNG - 8 kg - 1400 trs/min - Blanc</h5>
-                <h3 class="card-text font-weight-bold text-danger">379 euros !</h3>
+                <h5 class="card-title">BOSCH GSN58VWEV - Congélateur armoire - 365L - Froid ventilé - L 70 x H 191 cm - Blanc</h5>
+                <h3 class="card-text font-weight-bold text-danger">689 € !</h3>
                 <a href="#" class="btn btn-primary">En savoir plus</a>
               </div>
+            </div>  
+          </div>    
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/friteuse.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">TEFAL FR511170 Filtra Pro Friteuse semi-professionnelle Inox&Design, 2400 W, 3 L</h5>
+                <h3 class="card-text font-weight-bold text-danger">79 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/lave-linge.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Lave-linge hublot SAMSUNG - 8 kg - 1400 trs/min - Blanc</h5>
+                  <h3 class="card-text font-weight-bold text-danger">379 € !</h3>
+                  <a href="#" class="btn btn-primary">En savoir plus</a>
+                </div>
+            </div>
           </div>
 
         </div>
@@ -261,28 +274,34 @@
             </div>
           </div>
 
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/pc-portable.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">PC Portable ASUS - 15,6" FHD - Intel Core i5-1035G1 - RAM 8 Go - </h5>
-              <h3 class="card-text font-weight-bold text-danger">589 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/pc-portable.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">PC Portable ASUS - 15,6" FHD - Intel Core i5-1035G1 - RAM 8 Go - </h5>
+                <h3 class="card-text font-weight-bold text-danger">589 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
             </div>
           </div>
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/carte-graphique.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">MSI Carte graphique GeForce GT 710 2Go DDR3</h5>
-              <h3 class="card-text font-weight-bold text-danger">59 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/carte-graphique.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">MSI Carte graphique GeForce GT 710 2Go DDR3</h5>
+                <h3 class="card-text font-weight-bold text-danger">59 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
             </div>
           </div>
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/ecran.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Ecran PC - SAMSUNG S22F350FHR - 21.5" FHD - Dalle TN - 5 ms - HDMI / VGA</h5>
-              <h3 class="card-text font-weight-bold text-danger">119 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/ecran.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Ecran PC - SAMSUNG S22F350FHR - 21.5" FHD - Dalle TN - 5 ms - HDMI / VGA</h5>
+                <h3 class="card-text font-weight-bold text-danger">119 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
             </div>
           </div>
 
@@ -300,28 +319,34 @@
             </div>
           </div>
 
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/tv1.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">PC Portable ASUS - 15,6" FHD - Intel Core i5-1035G1 - RAM 8 Go - </h5>
-              <h3 class="card-text font-weight-bold text-danger">699 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/tv1.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">PC Portable ASUS - 15,6" FHD - Intel Core i5-1035G1 - RAM 8 Go - </h5>
+                <h3 class="card-text font-weight-bold text-danger">699 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
             </div>
           </div>
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/lg-sn11rg-barre-de-son-avec-caissons-de-basse-sa.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">LG SN11RG - Barre de son avec caissons de basse sans fil - Bluetooth, HDMI - Noir</h5>
-              <h3 class="card-text font-weight-bold text-danger">899 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/lg-sn11rg-barre-de-son-avec-caissons-de-basse-sa.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">LG SN11RG - Barre de son avec caissons de basse sans fil - Bluetooth, HDMI - Noir</h5>
+                <h3 class="card-text font-weight-bold text-danger">899 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
             </div>
           </div>
-          <div class="card col-md-4 d-flex flex-column align-items-center" style="border: 1px solid grey">
-            <img class="card-img-top img-fluid" src="images/sony-srsxb12b-ce7-enceinte-portable-bluetooth.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Sony SRSXB12B.CE7 Enceinte portable - Bluetooth - Extra Bass - Waterproof - Noir</h5>
-              <h3 class="card-text font-weight-bold text-danger">49 euros !</h3>
-              <a href="#" class="btn btn-primary">En savoir plus</a>
+          <div class="card col-md-4 d-flex flex-column align-items-center p-5">
+            <div class="p-2" style="border: 1px solid grey">
+              <img class="card-img-top img-fluid" src="images/sony-srsxb12b-ce7-enceinte-portable-bluetooth.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Sony SRSXB12B.CE7 Enceinte portable - Bluetooth - Extra Bass - Waterproof - Noir</h5>
+                <h3 class="card-text font-weight-bold text-danger">49 € !</h3>
+                <a href="#" class="btn btn-primary">En savoir plus</a>
+              </div>
             </div>
           </div>
 
